--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "cdktf": "0.0.17",
-    "constructs": "^3.0.14"
+    "constructs": "^3.0.14",
+    "config": "3.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
