--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cdktf-sample",
+  "name": "cdktf-samples",
   "version": "1.0.0",
   "main": "main.js",
   "types": "main.ts",
@@ -19,13 +19,13 @@
     "node": ">=10.12"
   },
   "dependencies": {
-    "cdktf": "0.0.17",
-    "constructs": "^3.0.14",
-    "config": "3.3.2"
+    "cdktf": "^0.1.0",
+    "config": "3.3.2",
+    "constructs": "^3.3.27"
   },
   "devDependencies": {
-    "@types/node": "^14.11.8",
-    "cdktf-cli": "0.0.17",
-    "typescript": "^4.0.3"
+    "@types/node": "^14.14.30",
+    "cdktf-cli": "^0.1.0",
+    "typescript": "^4.1.5"
   }
 }
