--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "node": ">=10.12"
   },
   "dependencies": {
-    "cdktf": "^0.1.0",
+    "cdktf": "0.8.1",
     "config": "3.3.2",
-    "constructs": "^3.3.27"
+    "constructs": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.30",
-    "cdktf-cli": "^0.1.0",
-    "typescript": "^4.1.5"
+    "cdktf-cli": "0.8.1",
+    "typescript": "^4.1.5",
+    "aws-cdk-lib": "2.0.0"
   }
 }
